fix: add link to RSS logo

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       </section>
     </main>
     <footer>
-      <img src="Images/logo-rsschool3.png" alt="logo">
+      <a href="https://app.rs.school/"><img src="Images/logo-rsschool3.png" alt="logo"></a>
       <ul>
         <li><a href="https://github.com/aabelov2703">https://github.com/aabelov2703</a></li>
         <li>&copy;2021</li>
