fix: remove anomalies while changing screen

--- a/index.html
+++ b/index.html
@@ -44,13 +44,19 @@
           </section>
       <section id="about">
         <h2>About</h2>
-        <h4>Summary</h4>
-        <p>I'm SQL Developer and have expierence with different relational DB. Also I have expierence with OLAP columnar db Clickhouse from Yandex and ETL processes. Besides that I'm familiar with Docker and bash-scripts little bit. So, now my goal is to be familiar with front-end developing in JS</p>
-        <h4>More about me</h4>
-        <div class="video">
-          <iframe src="https://www.youtube.com/embed/ZQ_fx9z-MQo" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <div class="about">
+          <div class="summary">
+            <h4>Summary</h4>
+            <p>I'm SQL Developer and have expierence with different relational DB. Also I have expierence with OLAP columnar db Clickhouse from Yandex and ETL processes. Besides that I'm familiar with Docker and bash-scripts little bit. So, now my goal is to be familiar with front-end developing in JS</p>
+          </div>
+          <div class="more">
+            <h4>More about me</h4>
+            <div class="video">
+              <iframe src="https://www.youtube.com/embed/ZQ_fx9z-MQo" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+          </div>
         </div>
-    </section>
+      </section>
       <section id="skills">
         <h2>Skills</h2>
         <ul>
@@ -111,12 +117,25 @@
       </section>
       <section id="projects">
         <h2>Projects</h2>
-        <h4>Vertical/horizontal clock slider for multiple time zones</h4>
-        <div class="project">
-          <a href="https://rolling-scopes-school.github.io/aabelov2703-JSFEPRESCHOOL/Vertical%20Slider/" target="_blank">
-            <img src="Images/project.png" alt="Slider" class="slider">
-          </a>
-          <h6>* wide screen size only</h6>
+        <div class="projects">
+          <div class="prj-slider">
+            <div class="project">
+              <h4>Clock-slider</h4>
+               <a href="https://rolling-scopes-school.github.io/aabelov2703-JSFEPRESCHOOL/Vertical%20Slider/" target="_blank">
+                <img src="Images/prj-slider.png" alt="Slider" class="slider">
+              </a>
+              <h6>* wide screen size only</h6>
+            </div>
+          </div>
+          <div class="prj-whack">
+            <h4>Whack-a-mole game</h4>
+            <div class="project">
+              <a href="https://rolling-scopes-school.github.io/aabelov2703-JSFEPRESCHOOL/whack-a-mole/" target="_blank">
+                <img src="Images/prj-whack.png" alt="Slider" class="whack">
+              </a>
+              <h6>* wide screen size only</h6>
+            </div>
+          </div>
         </div>
       </section>
       <section id="experience">
