--- a/index.html
+++ b/index.html
@@ -11,164 +11,184 @@
 </head>
 <body>
   <div class="cntr">
-    <header>
-      <div class="nav-wrap">
-        <nav class="nav">
+    <div class="nav-wrap">
+      <nav class="nav">
+        <ul>
+          <li class="menu"><a href="#">Menu</a></li>
+          <li><a href="#contacts">CONTACTS</a></li>
+          <li><a href="#about">ABOUT</a></li>
+          <li><a href="#skills">SKILLS</a></li>
+          <li><a href="#code">CODE</a></li>
+          <li><a href="#projects">PROJECTS</a></li>
+          <li><a href="#experience">EXPIERENCE</a></li>
+          <li><a href="#education">EDUCATION</a></li>
+          <li><a href="#languages">LANGUAGE</a></li>
+        </ul>
+      </nav>
+    </div>
+    <div class="container">
+      <header>
+        <div class="header-container">
+          <img src="Images/im.jpg" alt="profile">
+          <div class="h1">
+            <h1>Aleksandr Belov</h1>
+            <h3>Database Developer</h3>
+          </div>
+        </div>
+        <div id="contacts">
+          <h2>Contacts</h2>
           <ul>
-            <li class="menu"><a href="#">Menu</a></li>
-            <li><a href="#contacts">CONTACTS</a></li>
-            <li><a href="#about">ABOUT</a></li>
-            <li><a href="#skills">SKILLS</a></li>
-            <li><a href="#code">CODE</a></li>
-            <li><a href="#projects">PROJECTS</a></li>
-            <li><a href="#experience">EXPIERENCE</a></li>
-            <li><a href="#education">EDUCATION</a></li>
-            <li><a href="#languages">LANGUAGE</a></li>
+            <li><h4>Email:<span class="sp-h">
+              <a href="mailto:alex.belov.2703@gmail.com">&nbsp;<img src="Images/email.svg" alt="e-mail" class="img-span">&nbsp;Mail me</a>
+            </span></h4></li>
+            <li><h4>Git:<span class="sp-h">
+              <a href="https://github.com/aabelov2703">&nbsp;<img src="Images/github.svg" alt="git" class="img-span">&nbsp;my Github</a>
+            </span></h4></li>
+            <li><h4>VK:<span class="sp-h">
+              <a href="https://vk.com/belov.alexander">&nbsp;<img src="Images/vk.png" alt="VK" class="img-span">&nbsp;follow VK</a>
+            </span></h4></li>
           </ul>
-        </nav>
-      </div>
-      <div class="header-container">
-        <img src="Images/im.jpg" alt="profile">
-        <div class="h1">
-          <h1>Aleksandr Belov</h1>
-          <h3>Database Developer</h3>
         </div>
-      </div>
-    </header>
-    <main class="main">
-      <section id="contacts">
-        <h2>Contacts</h2>
-        <ul>
-          <li><h4>Email:</h4> <a href="mailto:alex.belov.2703@gmail.com">alex.belov.2703@gmail.com</a></li>
-          <li><h4>Git:</h4> <a href="https://github.com/aabelov2703">https://github.com/aabelov2703</a></li>
-        </ul>
-          </section>
-      <section id="about">
-        <h2>About</h2>
-        <div class="about">
-          <div class="more">
-            <h4>More about me</h4>
-            <div class="video">
-              <iframe src="https://www.youtube.com/embed/ZQ_fx9z-MQo" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </header>
+      <main class="main">
+        <section id="about">
+          <h2>About</h2>
+          <div class="about">
+            <div class="summary">
+              <h4>Summary</h4>
+              <p>I'm SQL Developer and have expierence with different relational DB. Also I have expierence with OLAP columnar db Clickhouse from Yandex and ETL processes. Besides that I'm familiar with Docker and bash-scripts little bit. So, now my goal is to be familiar with front-end developing in JS</p>
+            </div>
+            <div class="more">
+              <h4>More about me</h4>
+              <div class="video">
+                <iframe src="https://www.youtube.com/embed/ZQ_fx9z-MQo" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              </div>
             </div>
           </div>
-          <div class="summary">
-            <h4>Summary</h4>
-            <p>I'm SQL Developer and have expierence with different relational DB. Also I have expierence with OLAP columnar db Clickhouse from Yandex and ETL processes. Besides that I'm familiar with Docker and bash-scripts little bit. So, now my goal is to be familiar with front-end developing in JS</p>
-          </div>
-        </div>
-      </section>
-      <section id="skills">
-        <h2>Skills</h2>
-        <ul>
-          <li><h4>Languages:</h4> PL/PgSQL, PL/SQL, TSQL, Python, HTML, CSS, JS</li>
-          <li><h4>Databases:</h4> Oracle, MS SQL, Postgres, Clickhouse</li>
-          <li><h4>CVS:</h4> Git, SVN</li>
-          <li><h4>IDE:</h4> VS, VS Code, PyCharm</li>
-          <li><h4>Agile:</h4> Scrum</li>
-          <li><h4>Others:</h4> Dockers, bash-scripts</li>
-        </ul>
-      </section>
-      <section id="code">
-        <h2>Examples</h2>
-        <h4>Python</h4>
-        <h5>Quick sort algorithm</h5>
+        </section>
+        <section id="skills">
+          <h2>Skills</h2>
+          <ul>
+            <li><h4>Languages:</h4> PL/PgSQL, PL/SQL, TSQL, Python, HTML, CSS, JS</li>
+            <li><h4>Databases:</h4> Oracle, MS SQL, Postgres, Clickhouse</li>
+            <li><h4>CVS:</h4> Git, SVN</li>
+            <li><h4>IDE:</h4> VS, VS Code, PyCharm</li>
+            <li><h4>Agile:</h4> Scrum</li>
+            <li><h4>Others:</h4> Dockers, bash-scripts</li>
+          </ul>
+        </section>
+        <section id="code">
+          <h2>Examples</h2>
+          <h4>Python</h4>
+          <h5>Quick sort algorithm</h5>
+          <pre>
+            <code class="python">def quick_sort(nums, fst, lst):
+      if fst >= lst:
+          return
+      # ini
+      i, j = fst, lst
+      pivot = nums[(i + j) // 2]
+      # swap around median
+      while i &lt;= j:
+          while nums[i] &lt; pivot:
+              i += 1
+          while nums[j] > pivot:
+              j -= 1
+          if i &lt;= j:
+              nums[i], nums[j] = nums[j], nums[i]
+              i, j = i + 1, j - 1
+      # recursive call
+      if fst &lt; j:
+          quick_sort(nums, fst, j)
+      if i &lt; lst:
+          quick_sort(nums, i, lst)
+      return nums</code>
+        </pre>
+        <h4>JavaScript</h4>
+        <h5>Human readable number</h5>
+        <h6> * up to 999</h6>
         <pre>
-          <code class="python">def quick_sort(nums, fst, lst):
-    if fst >= lst:
-        return
-    # ini
-    i, j = fst, lst
-    pivot = nums[(i + j) // 2]
-    # swap around median
-    while i &lt;= j:
-        while nums[i] &lt; pivot:
-            i += 1
-        while nums[j] > pivot:
-            j -= 1
-        if i &lt;= j:
-            nums[i], nums[j] = nums[j], nums[i]
-            i, j = i + 1, j - 1
-    # recursive call
-    if fst &lt; j:
-        quick_sort(nums, fst, j)
-    if i &lt; lst:
-        quick_sort(nums, i, lst)
-    return nums</code>
-      </pre>
-      <h4>JavaScript</h4>
-      <h5>Human readable number</h5>
-      <h6> * up to 999</h6>
-      <pre>
-        <code class="JavaScript">const toReadable = (num) => {
-  let arr1 = ['zero', 'one', 'two', 'three', 'four', 'five', 'six', 'seven', 'eigth', 'nine', 
-        'ten', 'eleven', 'twelve', 'thirteen', 'fourteen', 'fifteen', 'sixteen', 'seventeen', 'eighteen', 'nineteen',
-        'twenty', 'thirty', 'forty', 'fifty', 'sixty', 'seventy', 'eighty', 'ninety'],
-  res = '',
-  ind = String(num).length;        
+          <code class="JavaScript">const toReadable = (num) => {
+    let arr1 = ['zero', 'one', 'two', 'three', 
+          'four','five', 'six', 'seven', 'eigth',
+          'nine', 'ten', 'eleven', 'twelve', 
+          'thirteen', 'fourteen', 'fifteen', 
+          'sixteen', 'seventeen', 'eighteen', 
+          'nineteen', 'twenty', 'thirty', 'forty',
+          'fifty', 'sixty', 'seventy', 'eighty', 
+          'ninety'],
+    res = '',
+    ind = String(num).length;        
+  
+    if (ind === 1 || (ind === 2 && num &lt; 20)) {
+      res = arr1[num]; // 0..19
+    } else if (ind == 2) {
+      res = arr1[18 + Math.floor(num / 10)];
+      res += (num % 10 === 0) 
+        ? '' 
+        : ' ' + toReadable(num % 10);
+    } else {
+      res = arr1[Math.floor(num / 100)] 
+        + ' hundred';
+      res += (num % 100 === 0) 
+        ? '' 
+        : ' ' + toReadable(num % 100);
+    }
+    return res;
+  };      </code>
+        </pre>
+        </section>
+        <section id="projects">
+          <h2>Projects</h2>
+          <div class="projects">
+            <div class="prj-slider">
+              <div class="project">
+                <h4>Clock-slider</h4>
+                <p>Learning DOM technology and animation</p>
+                <a href="https://rolling-scopes-school.github.io/aabelov2703-JSFEPRESCHOOL/Vertical%20Slider/" target="_blank">
+                  <img src="Images/prj-slider.png" alt="Slider" class="slider">
+                </a>
+                <h6>* wide screen size only</h6>
+              </div>
+            </div>
+            <div class="prj-whack">
+              <h4>Whack-a-mole game</h4>
+              <p>Learning DOM technology and localStorage</p>
+              <div class="project">
+                <a href="https://rolling-scopes-school.github.io/aabelov2703-JSFEPRESCHOOL/whack-a-mole/" target="_blank">
+                  <img src="Images/prj-whack.png" alt="Slider" class="whack">
+                </a>
+                <h6>* wide screen size only</h6>
+              </div>
+            </div>
+          </div>
+        </section>
+        <section id="experience">
+          <h2>Experience</h2>
+          <ul>
+            <li><h4>I-SERV:</h4> <i>March 2018 - December 2020</i>. SQL Developer</li>
+            <li><h4>OTR-2000:</h4> <i>June 2006 - February 2018</i>. SQL Developer</li>
+          </ul>
+        </section>
+        <section id="education">
+          <h2>Education</h2>
+          <ul>
+            <li><h4>Chuvah State University:</h4> <i>1995 - 2000</i></li>
+            <li><h4>self-education:</h4> Python, bash-scripts, Java</li>
+            <li><h4>online courses:</h4> <i>June 2021 - now</i>. JS/Front-end разработчик</li>
+          </ul>
+        </section>
+        <section id="languages">
+          <h2>Languages</h2>
+          <ul>
+            <li><h4>Russian:</h4> Native</li>
+            <li><h4>English:</h4> Intermediate (B2)</li>
+          </ul>
+          <p></p>
+        </section>
+      </main>
+    </div>
 
-  if (ind === 1 || (ind === 2 && num &lt; 20)) {
-    res = arr1[num]; // 0..19
-  } else if (ind == 2) {
-    res = arr1[18 + Math.floor(num / 10)]; // tens
-    res += (num % 10 === 0) ? '' : ' ' + toReadable(num % 10); // recursive digits
-  } else {
-    res = arr1[Math.floor(num / 100)] + ' hundred'; // hundreeds
-    res += (num % 100 === 0) ? '' : ' ' + toReadable(num % 100); // recursive tens & digits
-  }
-  return res;
-};      </code>
-      </pre>
-      </section>
-      <section id="projects">
-        <h2>Projects</h2>
-        <div class="projects">
-          <div class="prj-slider">
-            <div class="project">
-              <h4>Clock-slider</h4>
-              <p>Learning DOM technology and animation</p>
-              <a href="https://rolling-scopes-school.github.io/aabelov2703-JSFEPRESCHOOL/Vertical%20Slider/" target="_blank">
-                <img src="Images/prj-slider.png" alt="Slider" class="slider">
-              </a>
-              <h6>* wide screen size only</h6>
-            </div>
-          </div>
-          <div class="prj-whack">
-            <h4>Whack-a-mole game</h4>
-            <p>Learning DOM technology and localStorage</p>
-            <div class="project">
-              <a href="https://rolling-scopes-school.github.io/aabelov2703-JSFEPRESCHOOL/whack-a-mole/" target="_blank">
-                <img src="Images/prj-whack.png" alt="Slider" class="whack">
-              </a>
-              <h6>* wide screen size only</h6>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section id="experience">
-        <h2>Experience</h2>
-        <ul>
-          <li><h4>I-SERV:</h4> <i>March 2018 - December 2020</i>. SQL Developer</li>
-          <li><h4>OTR-2000:</h4> <i>June 2006 - February 2018</i>. SQL Developer</li>
-        </ul>
-      </section>
-      <section id="education">
-        <h2>Education</h2>
-        <ul>
-          <li><h4>Chuvah State University:</h4> <i>1995 - 2000</i></li>
-          <li><h4>self-education:</h4> Python, bash-scripts, Java</li>
-          <li><h4>online courses:</h4> <i>June 2021 - now</i>. JS/Front-end разработчик</li>
-        </ul>
-      </section>
-      <section id="languages">
-        <h2>Languages</h2>
-        <ul>
-          <li><h4>Russian:</h4> Native</li>
-          <li><h4>English:</h4> Intermediate (B2)</li>
-        </ul>
-        <p></p>
-      </section>
-    </main>
     <footer>
       <a href="https://rs.school/js/"><img src="Images/rs_school_js.svg" alt="logo"></a>
       <ul>
